--- a/upload/catalog/view/theme/default/template/product/product.twig
+++ b/upload/catalog/view/theme/default/template/product/product.twig
@@ -708,6 +708,9 @@
 
             // Очищаем массив
             dataArray.length = 0;
+            $('#uploadbtn').val('')
+            mainImagesFiles = undefined;
+            console.log(mainImagesFiles)
 
             return false;
         }
