--- a/upload/catalog/view/theme/default/template/product/product.twig
+++ b/upload/catalog/view/theme/default/template/product/product.twig
@@ -197,8 +197,8 @@
             {% endif %}
             {% if review_status %}
             <div class="tab-pane" id="tab-review">
+              <div id="review"></div>
               <form class="form-horizontal" id="form-review">
-                <div id="review"></div>
                 <h2>{{ text_write }}</h2>
                 {% if review_guest %}
                 <div class="form-group required">
@@ -442,16 +442,38 @@
             {% endif %}</div>
           {% if review_status %}
           <div class="rating">
-            <p>{% for i in 1..5 %}
-              {% if rating < i %}<span class="fa fa-stack"><i class="fa fa-star-o fa-stack-1x"></i></span>{% else %}<span class="fa fa-stack"><i class="fa fa-star fa-stack-1x"></i><i class="fa fa-star-o fa-stack-1x"></i></span>{% endif %}
-              {% endfor %} <a href="" onclick="$('a[href=\'#tab-review\']').trigger('click'); return false;">{{ reviews }}</a> / <a href="" onclick="$('a[href=\'#tab-review\']').trigger('click'); return false;">{{ text_write }}</a></p>
+            <div style="display:flex; justify-content: space-between; align-items: center;">
+                <div>
+                    {% for i in 1..5 %}
+                        {% if rating < i %}
+                            <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-1x"></i></span>
+                        {% else %}
+                            <span class="fa fa-stack"><i class="fa fa-star fa-stack-1x"></i><i class="fa fa-star-o fa-stack-1x"></i></span>
+                        {% endif %}
+                    {% endfor %}
+                </div>
+                <div style="font-size: 16px;">{{ reviews_total_rating }}/5</div>
+            </div>
+
             <hr>
-            <!-- AddThis Button BEGIN -->
-            <div class="addthis_toolbox addthis_default_style" data-url="{{ share }}"><a class="addthis_button_facebook_like" fb:like:layout="button_count"></a> <a class="addthis_button_tweet"></a> <a class="addthis_button_pinterest_pinit"></a> <a class="addthis_counter addthis_pill_style"></a></div>
-            <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-515eeaf54693130e"></script> 
-            <!-- AddThis Button END --> 
+
+            <div>
+                {% for rating_info in rating_info %}
+                    <div style="display: flex; justify-content: space-between; align-items: center;">
+                        <span style="width: 80px;">{{ rating_info.rating_number }}</span>
+                        <div class="progress" style="height: 5px; width: 100%; margin: 0 10px;">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="{{ rating_info.rating_percent }}" aria-valuemin="0" aria-valuemax="100" style="width:{{ rating_info.rating_percent }}%;height: 5px;"></div>
+                        </div>
+                        <span>{{ rating_info.rating_count }}</span>
+                    </div>
+                {% endfor %}
+            </div>
+
+            <hr>
+
           </div>
-          {% endif %} </div>
+          {% endif %}
+        </div>
       </div>
       {% if products %}
       <h3>{{ text_related }}</h3>
@@ -883,7 +905,37 @@ $('button[id^=\'button-upload\']').on('click', function() {
 		}
 	}, 500);
 });
-//--></script> 
+//--></script>
+<script>
+    $('#review').delegate('#input-with-photo', 'change', function (e) {
+        let url = '';
+
+        if (this.checked) {
+            url = this.value + '&withPhoto=1';
+        } else {
+            url = this.value;
+        }
+
+        e.preventDefault();
+
+        $('#review').fadeOut('slow');
+
+        $('#review').load(url);
+
+        $('#review').fadeIn('slow');
+    })
+</script>
+<script>
+    $('#review').delegate('.review-sort', 'change', function (e) {
+        e.preventDefault();
+
+        $('#review').fadeOut('slow');
+
+        $('#review').load(this.value);
+
+        $('#review').fadeIn('slow');
+    })
+</script>
 <script type="text/javascript"><!--
 $('#review').delegate('.pagination a', 'click', function(e) {
     e.preventDefault();
