--- a/upload/catalog/view/theme/default/template/product/review.twig
+++ b/upload/catalog/view/theme/default/template/product/review.twig
@@ -1,30 +1,57 @@
 {% if reviews %}
-{% for review in reviews %}
-<table class="table table-striped table-bordered">
-  <tr>
-    <td style="width: 50%;"><strong>{{ review.author }}</strong></td>
-    <td class="text-right">{{ review.date_added }}</td>
-  </tr>
-  <tr>
-    <td colspan="2">
-      <p>{{ review.text }}</p>
-      {% for i in 1..5 %}
-        {% if review.rating < i %}
-          <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-2x"></i></span>
-        {% else %}
-          <span class="fa fa-stack"><i class="fa fa-star fa-stack-2x"></i><i class="fa fa-star-o fa-stack-2x"></i></span>
-        {% endif %}
-      {% endfor %}
-      <p>
-        {% for image in review.images %}
-          <img src="{{ image }}" alt="">
-        {% endfor %}
-      </p>
-    </td>
-  </tr>
-</table>
-{% endfor %}
-<div class="text-right">{{ pagination }}</div>
+    <h3>{{ text_reviews_word }}</h3>
+
+    <div class="row">
+        <div class="col-md-4 col-xs-6">
+            <div class="form-group input-group input-group-sm">
+                <select id="input-sort" class="form-control review-sort">
+
+                    {% for sorts in sorts %}
+                        {% if sorts.value == '%s-%s'|format(sort, order) %}
+                            <option value="{{ sorts.href }}" selected="selected">{{ sorts.text }}</option>
+                        {% else %}
+                            <option value="{{ sorts.href }}">{{ sorts.text }}</option>
+                        {% endif %}
+                    {% endfor %}
+
+                </select>
+            </div>
+        </div>
+        <div class="col-md-4 col-xs-6">
+            <div class="form-group">
+                <input type="checkbox" value="{{ only_with_photo }}" id="input-with-photo" {% if withPhoto %}checked{% endif %}>
+                <label for="input-with-photo">{{ text_only_with_photo }}</label>
+            </div>
+        </div>
+    </div>
+
+    {% for review in reviews %}
+    <table class="table table-striped table-bordered">
+      <tr>
+        <td style="width: 50%;"><strong>{{ review.author }}</strong></td>
+        <td class="text-right">{{ review.date_added }}</td>
+      </tr>
+      <tr>
+        <td colspan="2">
+          <p>{{ review.text }}</p>
+          {% for i in 1..5 %}
+            {% if review.rating < i %}
+              <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-2x"></i></span>
+            {% else %}
+              <span class="fa fa-stack"><i class="fa fa-star fa-stack-2x"></i><i class="fa fa-star-o fa-stack-2x"></i></span>
+            {% endif %}
+          {% endfor %}
+          <p>
+            {% for image in review.images %}
+              <img src="{{ image }}" alt="">
+            {% endfor %}
+          </p>
+        </td>
+      </tr>
+    </table>
+    {% endfor %}
+
+    <div class="text-right">{{ pagination }}</div>
 {% else %}
-<p>{{ text_no_reviews }}</p>
+    <p>{{ text_no_reviews }}</p>
 {% endif %} 
