--- a/upload/catalog/view/theme/default/template/product/product.twig
+++ b/upload/catalog/view/theme/default/template/product/product.twig
@@ -198,72 +198,6 @@
             {% if review_status %}
             <div class="tab-pane" id="tab-review">
               <div id="review"></div>
-              <form class="form-horizontal" id="form-review">
-                <h2>{{ text_write }}</h2>
-                {% if review_guest %}
-                <div class="form-group required">
-                  <div class="col-sm-12">
-                    <label class="control-label" for="input-name">{{ entry_name }}</label>
-                    <input type="text" name="name" value="{{ customer_name }}" id="input-name" class="form-control" />
-                  </div>
-                </div>
-                <div class="form-group required">
-                  <div class="col-sm-12">
-                    <label class="control-label" for="input-review">{{ entry_review }}</label>
-                    <textarea name="text" rows="5" id="input-review" class="form-control"></textarea>
-                    <div class="help-block">{{ text_note }}</div>
-                  </div>
-                </div>
-                <div class="form-group required">
-                  <div class="col-sm-12">
-                    <div class="review-image">
-                      <div id="drop-files" ondragover="return false">
-                        <input type="file" name="review-image" id="uploadbtn" accept=".jpg, .jpeg, .png"  multiple />
-                        <p>{{ text_click_or_drag_n_drop }}</p>
-                        <p>{{ text_max_images }}</p>
-                      </div>
-                      <div id="uploaded-holder">
-                        <div id="dropped-files">
-                          <div id="upload-button">
-                            <span>0 {{ text_files }}</span>
-                            <a href="#" class="delete">{{ button_delete_all }}</a>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="form-group required">
-                  <div class="col-sm-12">
-                    <label class="control-label">{{ entry_rating }}</label>
-                    &nbsp;&nbsp;&nbsp; {{ entry_bad }}&nbsp;
-                    <input type="radio" name="rating" value="1" />
-                    &nbsp;
-                    <input type="radio" name="rating" value="2" />
-                    &nbsp;
-                    <input type="radio" name="rating" value="3" />
-                    &nbsp;
-                    <input type="radio" name="rating" value="4" />
-                    &nbsp;
-                    <input type="radio" name="rating" value="5" />
-                    &nbsp;{{ entry_good }}</div>
-                </div>
-                <div class="form-group">
-                  <div class="col-sm-12">
-                    <label class="control-label">{{ entry_hide_customer_info }}</label>
-                    <input type="checkbox" name="hidden_customer_info">
-                  </div>
-                </div>
-                {{ captcha }}
-                <div class="buttons clearfix">
-                  <div class="pull-right">
-                    <button type="button" id="button-review" data-loading-text="{{ text_loading }}" class="btn btn-primary">{{ button_continue }}</button>
-                  </div>
-                </div>
-                {% else %}
-                {{ text_login }}
-                {% endif %}
-              </form>
             </div>
             {% endif %}</div>
         </div>
@@ -470,6 +404,8 @@
             </div>
 
             <hr>
+
+            <a href="{{ write_review_btn }}" class="btn btn-default">{{ button_write_review }}</a>
 
           </div>
           {% endif %}
@@ -948,82 +884,6 @@ $('#review').delegate('.pagination a', 'click', function(e) {
 });
 
 $('#review').load('index.php?route=product/product/review&product_id={{ product_id }}');
-
-$('#button-review').on('click', function() {
-	$.ajax({
-		url: 'index.php?route=product/product/write&product_id={{ product_id }}',
-		type: 'post',
-		dataType: 'json',
-		data: $("#form-review").serialize(),
-		beforeSend: function() {
-			$('#button-review').button('loading');
-		},
-		complete: function() {
-			$('#button-review').button('reset');
-		},
-		success: function(json) {
-			$('.alert-dismissible').remove();
-
-			if (json['error']) {
-				$('#review').after('<div class="alert alert-danger alert-dismissible"><i class="fa fa-exclamation-circle"></i> ' + json['error'] + '</div>');
-			}
-
-			if (json['success']) {
-        if( typeof mainImagesFiles != 'undefined' && json['review_id'] ) {
-            // создадим объект данных формы
-            var dataImages = new FormData();
-
-            // заполняем объект данных файлами в подходящем для отправки формате
-            $.each( mainImagesFiles, function( i, file ){
-                dataImages.append( "file[" + i + "]", file.file );
-            });
-
-            console.log(dataImages.values())
-
-            // добавим переменную для идентификации запроса
-            dataImages.append( 'review_file_upload', 1 );
-            dataImages.append( 'review_id', json['review_id'] );
-
-            // AJAX запрос
-            $.ajax({
-                url         : 'index.php?route=product/product/writeImage&review_id=' + json['review_id'],
-                type        : 'POST', // важно!
-                data        : dataImages,
-                cache       : false,
-                dataType    : 'json',
-                // отключаем обработку передаваемых данных, пусть передаются как есть
-                processData : false,
-                // отключаем установку заголовка типа запроса. Так jQuery скажет серверу что это строковой запрос
-                contentType : false,
-                // функция успешного ответа сервера
-                success     : function( respond, status, jqXHR ) {
-
-                    // ОК - файлы загружены
-                    if( typeof respond.error === 'undefined' ) {
-                        $('#dropped-files #upload-button .delete').click()
-                    }
-                    // ошибка
-                    else {
-                        console.log('ОШИБКА: ' + respond.data );
-                    }
-                },
-                // функция ошибки ответа сервера
-                error: function( jqXHR, status, errorThrown ) {
-                    console.log( 'ОШИБКА AJAX запроса: ' + status, jqXHR );
-                }
-
-            });
-        }
-
-				$('#review').after('<div class="alert alert-success alert-dismissible"><i class="fa fa-check-circle"></i> ' + json['success'] + '</div>');
-
-				$('input[name=\'name\']').val('');
-				$('textarea[name=\'text\']').val('');
-				$('input[name=\'rating\']:checked').prop('checked', false);
-			}
-		}
-	});
-});
 
 $(document).ready(function() {
 	$('.thumbnails').magnificPopup({
