--- a/upload/catalog/view/theme/default/template/product/review.twig
+++ b/upload/catalog/view/theme/default/template/product/review.twig
@@ -14,6 +14,7 @@
   }
   .author-avatar {
     display: flex;
+    align-items: center;
   }
   .author-avatar .author-avatar-text {
     display: inline-block;
@@ -67,20 +68,21 @@
 
           <div class="author-avatar">
             <div class="author-avatar-text">{{ review.first_letter_author }}</div>
-          </div>
-          <span>{{ review.author }}</span>
-          <span>
-            {{ review.rating }}
 
-            {% for i in 1..5 %}
-              {% if review.rating < i %}
-                <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-2x"></i></span>
-                  {% else %}
-                <span class="fa fa-stack"><i class="fa fa-star fa-stack-2x"></i><i class="fa fa-star-o fa-stack-2x"></i></span>
-              {% endif %}
-            {% endfor %}
+            <span style="margin: 0 20px;">{{ review.author }}</span>
+            <span>
+              {{ review.rating }}
+
+                {% for i in 1..5 %}
+                  {% if review.rating < i %}
+                    <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-2x"></i></span>
+                    {% else %}
+                    <span class="fa fa-stack"><i class="fa fa-star fa-stack-2x"></i><i class="fa fa-star-o fa-stack-2x"></i></span>
+                  {% endif %}
+                {% endfor %}
             </span>
-          <span>{{ review.status }}</span>
+          </div>
+
           <span>{{ review.date_added }}</span>
         </div>
         <p>{{ review.text }}</p>
@@ -89,10 +91,17 @@
             <img src="{{ image }}" alt="">
           {% endfor %}
         </p>
+        {% if review.display_help_question %}
+          <p>
+            <span>{{ text_do_you_help_review }}</span>
+            <button class="btn btn-default help-review-btn" data-review-id="{{ review.review_id }}">{{ text_yes }} {% if review.help_count %}{{ review.help_count }}{% endif %}</button>
+            <button class="btn btn-default not-help-review-btn" data-review-id="{{ review.review_id }}">{{ text_no }} {% if review.not_help_count %}{{ review.not_help_count }}{% endif %}</button>
+          </p>
+        {% endif %}
       </div>
     {% endfor %}
 
     <div class="text-right">{{ pagination }}</div>
 {% else %}
     <p>{{ text_no_reviews }}</p>
-{% endif %} 
+{% endif %}
